# GATTServer

./: CMakeLists.txt  Makefile  README.md
src/: advertising.cpp  advertising.h  att.cpp  att.h  att_utils.cpp  att_utils.h  betterbuffer.cpp  betterbuffer.h  gattserver.cpp  gattserver.h  log.cpp  main.cpp  types.h  uuid.cpp  uuid.h
src/utils/: log.h  socket.h  utils.cpp  utils.h
